--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "start": "node main.js",
+    "web": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +21,6 @@
   },
   "homepage": "https://github.com/Dev7Kevin/Studying-Web#readme",
   "dependencies": {
-    "mysql": "^2.17.1",
-    "sanitize-html": "^1.20.1"
+    "mysql": "^2.17.1"
   }
 }
